fix meta-data alignment

--- a/common/common.scss
+++ b/common/common.scss
@@ -8,3 +8,7 @@
   width: 45px;
   z-index: 100;
 }
+
+.topic-meta-data {
+  padding: 15px 0 0 15px;
+}
